--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <div class="container">
       <div>
-        <h1 class="header_text">You wanna go out with me?</h1>
+        <h1 class="header_text">You wanna go out for a date with me?</h1>
       </div>
       <div class="gif_container">
         <img
