--- a/yes.html
+++ b/yes.html
@@ -13,5 +13,10 @@
           src="https://i.postimg.cc/wTDG30TB/yes.gif"
           alt="Cute animated illustration"
         />
+        </div>
+      <button class="btn" id="yesButton" onclick="https://wa.me/+919075175843">>
+        Let's Fix a Date
+      </button>
+    </div>
   </body>
 </html>
