--- a/yes.html
+++ b/yes.html
@@ -14,7 +14,7 @@
           alt="Cute animated illustration"
         />
         </div>
-      <button class="btn" id="yesButton" onclick="window.location.https://wa.me/+919075175843">
+      <button class="btn" id="yesButton" onclick="window.location.https://wa.link/7qhavp/">
         Let's Fix a Date
       </button>
     </div>
